distribution/kubernetes/docker-for-desktop/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: podcast-server
spec:
  tls:
    - hosts:
        - podcast.k8s.local
      secretName: podcast-k8s-local
  rules:
    - host: podcast.k8s.local
      http:
        paths:
          - path: /api
            backend:
              serviceName: backend
              servicePort: 8080
          - path: /actuator
            backend:
              serviceName: backend
              servicePort: 8080
          - path: /data
            backend:
              serviceName: storage
              servicePort: 9000
          - backend:
              serviceName: ui-v1
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio-console
spec:
  tls:
    - hosts:
        - minio.podcast.k8s.local
      secretName: minio-podcast-k8s-local
  rules:
    - host: minio.podcast.k8s.local
      http:
        paths:
          - backend:
              serviceName: storage
              servicePort: 9001
